loopdowhile.LoopDoWhile.scala.error
Compilation error:
LoopDoWhile:1: error: not found: value False
while (estSurBlanc()==False){avance} 
                      ^